# ffcc-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
ffcc/: __init__.py  core.py  matlab_port.py
scripts/: benchmark_gehler.py  demo.py  download_gehler.py
tests/: test_core.py
